quick fix for buttons not showiung on smaller screens

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -11125,13 +11125,14 @@ popup-notification {
     align-items: center; }
     popup-notification > .overlay > .container {
       opacity: 0;
+      text-align: center;
       transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
       min-width: 300px;
       max-width: 30%;
       border-radius: 0.5rem;
       position: relative; }
       popup-notification > .overlay > .container img {
-        width: 100%;
+        width: 75%;
         height: 100%;
         border-radius: 0.5rem; }
       popup-notification > .overlay > .container > .row.title-container .col {
