--- a/www/views/global-components/popup-notification/popup-notification.scss
+++ b/www/views/global-components/popup-notification/popup-notification.scss
@@ -20,6 +20,7 @@ popup-notification {
 
         > .container {
             opacity: 0;
+            text-align: center;
             transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
             min-width: 300px;
@@ -28,7 +29,7 @@ popup-notification {
             position: relative;
 
             img {
-                width: 100%;
+                width: 75%;
                 height: 100%;
                 border-radius: 0.5rem;
             }
